# merch_shop/app/Models/User.php
@@ -2,6 +2,7 @@
 
 namespace App\Models;
 
+use Hash;
 use Illuminate\Contracts\Auth\MustVerifyEmail;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Foundation\Auth\User as Authenticatable;
@@ -70,4 +71,15 @@ class User extends Authenticatable
     protected $casts = [
         'email_verified_at' => 'datetime',
     ];
+
+
+    public static function createFormRequest(array $requestData) : self {
+        $user = new self();
+        $user->name = $requestData['name'];
+        $user->email = $requestData['email'];
+        $user->password = Hash::make($requestData['password']);
+        $user->save();
+
+        return $user;
+    }
 }
